--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/kensanni/LibraryAPIs.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Sanni Kehinde",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/kensanni/LibraryAPIs/issues"
