--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
   "homepage": "https://github.com/kensanni/LibraryAPIs#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "eslint": "^4.7.2",
     "express": "^4.16.0",
     "morgan": "^1.9.0"
+  },
+  "devDependencies": {
+    "eslint-config-airbnb-base": "^12.0.1",
+    "eslint-plugin-import": "^2.7.0"
   }
 }
