--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start:dev": "nodemon --exec babel-node -- bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
