Modify package.json to update author [finishes #151542938]

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/kensanni/LibraryAPIs.git"
   },
   "keywords": [],
-  "author": "Sanni Kehinde",
+  "author": "Sanni Kehinde Usman",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/kensanni/LibraryAPIs/issues"
