--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "body-parser": "^1.18.2",
     "eslint": "^4.7.2",
     "express": "^4.16.0",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "pg": "^7.3.0",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.11.5"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
